# BNPClust

./: .gitignore  CMakeLists.txt  Doxyfile  README.MD  devenv.nix
R/: first_use.R  launcher.R  mcmc_analysis.R  mcmc_loop.R  utils.R  utils_plot.R
R/covariate_selection/: LA.R  municipalities.R
R/data_retrieval/: ACF.R  README.md
R/distance_retrieval/: comuni_distances.R  kde_distances.R
R/distributionStats_retrieval/: ACF.R
R/example/: Natarajan_NGGP.R
R/frequentist_approach/: PAM_mun.R  REDCAP.R  SKATER.R
docs/: CONTRIBUTING_8MD.html  ClusterInfo_8hpp.html  ClusterInfo_8hpp_source.html  DP-params_8hpp.html  DP-params_8hpp.js  DP-params_8hpp_source.html  DP_8cpp.html  DP_8hpp.html  DP_8hpp_source.html  DPx_8cpp.html  DPx_8hpp.html  DPx_8hpp_source.html  Data_8cpp.html  Data_8hpp.html  Data_8hpp_source.html  Datax_8cpp.html  Datax_8hpp.html  Datax_8hpp_source.html  Gamma__likelihood_8cpp.html  Gamma__likelihood_8hpp.html  Gamma__likelihood_8hpp.js  Gamma__likelihood_8hpp_source.html  Gamma__likelihood__distances_8cpp.html  Gamma__likelihood__distances_8hpp.html  Gamma__likelihood__distances_8hpp.js  Gamma__likelihood__distances_8hpp_source.html  GaussianMixtureModel-params_8hpp.html  GaussianMixtureModel-params_8hpp.js  GaussianMixtureModel-params_8hpp_source.html  GaussianMixtureModel__likelihood_8cpp.html  GaussianMixtureModel__likelihood_8hpp.html  GaussianMixtureModel__likelihood_8hpp.js  GaussianMixtureModel__likelihood_8hpp_source.html  Likelihood_8hpp.html  Likelihood_8hpp_source.html  MALA_8cpp.html  MALA_8hpp.html  MALA_8hpp_source.html  Module_8hpp.html  Module_8hpp_source.html  (+317 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1d.js  all_2.js  all_23.js  all_24.js  all_26.js  all_27.js  all_2c.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  files_0.js  (+64 more)
src/: bindings.cpp  r_bindings.cpp
src/likelihoods/: Gamma_likelihood.cpp  Gamma_likelihood.hpp  Gamma_likelihood_distances.cpp  Gamma_likelihood_distances.hpp  GaussianMixtureModel_likelihood.cpp  GaussianMixtureModel_likelihood.hpp  Natarajan_likelihood.cpp  Natarajan_likelihood.hpp  Natarajan_likelihood_summaryStats.cpp  Natarajan_likelihood_summaryStats.hpp  Null_likelihood.hpp
src/params/: DP-params.hpp  GaussianMixtureModel-params.hpp  NGGP-params.hpp  Natarajan-params.hpp  Process-params.hpp  utils-params.hpp
src/processes/: DP.hpp  DPx.hpp  NGGP.hpp  NGGPx.hpp
src/processes/caches/: binary_cache.hpp
src/processes/module/: binary_covariate_module_cache.cpp  categorical_covariate_module.hpp  spatial_module_continuous.cpp  spatial_module_continuous.hpp
src/samplers/: neal.cpp  neal.hpp  neal_ZDNAM.hpp  splitmerge.hpp  splitmerge_LSS.hpp  splitmerge_LSS_SDDS.hpp  splitmerge_SAMS.hpp
src/samplers/U_sampler/: MALA.cpp  MALA.hpp  RWMH.hpp  U_sampler.hpp
src/utils/: ClusterInfo.hpp  Data.cpp  Data.hpp  Datax.hpp  Likelihood.hpp  Module.hpp  Params.hpp  Process.hpp  Sampler.hpp
